Nivel de poder y de defensa añadidos
